<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@drawable/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/about_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_header" />

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAvatar"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/about_title"
            android:textColor="@color/white" />

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/line_divider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                app:divider="@drawable/line_divider"
                app:showDividers="middle|end">

                <toolgamecorporation.worldcupschedule.presentations.widget.CompatTextView
                    android:id="@+id/action_rate"
                    style="@style/ButtonAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:padding="16dp"
                    android:text="@string/about_btn_rate"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:drawableStart="@drawable/ic_star" />

                <toolgamecorporation.worldcupschedule.presentations.widget.CompatTextView
                    android:id="@+id/action_support"
                    style="@style/ButtonAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:padding="16dp"
                    android:text="@string/about_btn_more_love"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:drawableStart="@drawable/ic_support" />

                <toolgamecorporation.worldcupschedule.presentations.widget.CompatTextView
                    android:id="@+id/action_share"
                    style="@style/ButtonAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:padding="16dp"
                    android:text="@string/about_btn_spread_word"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:drawableStart="@drawable/ic_share" />

                <toolgamecorporation.worldcupschedule.presentations.widget.CompatTextView
                    android:id="@+id/action_feedback"
                    style="@style/ButtonAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:padding="16dp"
                    android:text="@string/about_btn_feed_back"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:drawableStart="@drawable/ic_feedback" />


                <toolgamecorporation.worldcupschedule.presentations.widget.CompatTextView
                    android:id="@+id/action_google_plus"
                    style="@style/ButtonAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:padding="16dp"
                    android:text="@string/about_btn_googgle_plus"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:drawableStart="@drawable/ic_google_plus_logo" />

                <toolgamecorporation.worldcupschedule.presentations.widget.CompatTextView
                    android:id="@+id/action_facebook"
                    style="@style/ButtonAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:minHeight="?attr/actionBarSize"
                    android:padding="16dp"
                    android:text="@string/about_btn_facebook"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:drawableStart="@drawable/ic_facebook_app_logo" />
            </android.support.v7.widget.LinearLayoutCompat>


        </LinearLayout>
    </ScrollView>
</LinearLayout>